# NavigationAnalyzer

./: .gitignore  README.md  action.yml  pyproject.toml
backend/: pyproject.toml
backend/navigation_analyzer/: __init__.py  config.py  models.py
backend/navigation_analyzer/analysis/: __init__.py  diagnosis_pack.py  diagnostics.py  engine.py  failures.py  lanelet2.py  metrics.py
backend/navigation_analyzer/api/: __init__.py  app.py
backend/navigation_analyzer/benchmarking/: __init__.py  thresholds.py
backend/navigation_analyzer/cli/: main.py
backend/navigation_analyzer/io/: __init__.py  reader.py  rosbag2.py  unitree_record_nav.py
backend/navigation_analyzer/reporting/: __init__.py  diagnosis_markdown.py  markdown.py
config/: autoware.yaml  benchmark_autoware.yaml  benchmark_nav2.yaml  cyclonedds_docker_eth0.xml  default.yaml
docs/: architecture.md  autoware.md  benchmarking.md  decisions.md  experiments.md  github_action.md  interfaces.md  simulation.md  status_for_gpt.md
frontend/: index.html  package-lock.json  package.json
scripts/: analyze_autoware_bag.sh  analyze_autoware_bag_docker.sh  analyze_sim_bag.sh  autoware_drive_goal.py  create_autoware_fixture_bag_docker.sh  record_autoware_bag.sh  record_autoware_planning_run_docker.sh  record_nav2_sim_bag.sh  run_autoware_planning_simulator_docker.sh  run_failure_zoo.sh  run_sample_demo.sh  send_nav2_goal.sh
tests/: test_benchmark_thresholds.py  test_diagnosis_markdown.py  test_diagnosis_pack.py  test_diagnostics.py  test_lanelet2_map.py  test_metrics.py  test_nav2_sim_fixture.py  test_tf_health.py  (+3 more)
(+32 files in other folders)
